--- a/flipquizz/WebApp/www/css/app.css
+++ b/flipquizz/WebApp/www/css/app.css
@@ -1,7 +1,50 @@
 body{
     text-align: center;
+    background-image: url("../img/uk2.jpg");
+    background-size: cover;
+}
+#vue{
+    width: 90vw;
+    height: 95vh;
+    background-color: rgba(240, 248, 255, 0.349);
+    margin: auto;
+    padding: 0;
+    -webkit-box-shadow: 0px 0px 14px 2px rgba(255,255,255,1);
+    -moz-box-shadow: 0px 0px 14px 2px rgba(255,255,255,1);
+    box-shadow: 0px 0px 14px 2px rgba(255,255,255,1);
+}
+.main{
+    height: 70vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+
+}
+.addTeam{
+    flex: 1;
+    text-align: center;
+}
+.btn{
+    height: 100px;
+    width: 130px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: right;
+
+}
+.btnMinus{
+    width: 60px;
+}
+.btnPlus{
+    width: 60px;
+
+}
+
+.questions{
+    flex: 1;
 }
 .team-container{
+    padding-bottom: 0px;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
@@ -9,33 +52,39 @@ body{
     justify-content: center;
 }
 .team{
-    padding: 1em;
-    margin: 10px;
-    border: 5px solid #000;
+    padding: 1.4em;
+    margin: auto;
     width: 250px;
+    font-size: 1.2em;
+    background-color: rgba(240, 248, 255, 0.349);
 }
 
 .team[data-id="1"] {
     border-color: #ff0088;
-    background-color:#ff008825 ;
-    border-radius: 10% / 50%;
+    background-color:#ff00887e ;
+    font-size: 1.2em;
+    color: aliceblue;
+
 }
 
 
 .team[data-id="2"] {
     border-color: #00ffcc;
-    background-color: #00ffcc1e;
-    border-radius: 10% / 50%;
+    background-color: #00ffcc7e;
+    font-size: 1.2em;
+    color: aliceblue;
 }
 
 .team[data-id="3"] {
     border-color: #fa8072;
-    background-color: #fa80721e;
-    border-radius: 10% / 50%;
+    background-color: #fa80727e;
+    font-size: 1.2em;
+    color: aliceblue;
 }
 
 .team[data-id="4"] {
     border-color: #4b0082;
-    background-color: #4c00821c;
-    border-radius: 10% / 50%;
+    background-color: #4c00827e;
+    font-size: 1.2em;
+    color: aliceblue;
 }
