--- a/flipquizz/WebApp/www/css/app.css
+++ b/flipquizz/WebApp/www/css/app.css
@@ -1,90 +1,167 @@
-body{
+@import url('https://fonts.googleapis.com/css?family=Fredericka+the+Great&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Nanum+Brush+Script&display=swap');
+body {
     text-align: center;
     background-image: url("../img/uk2.jpg");
     background-size: cover;
+    font-family: 'Fredericka the Great', cursive;
+    /* font-family: 'Nanum Brush Script', cursive; */
+
 }
-#vue{
+
+header h1 {
+    font-size: 60px;
+    color: white;
+    background-color: #00000062;
+}
+
+#vue {
     width: 90vw;
     height: 95vh;
-    background-color: rgba(240, 248, 255, 0.349);
+    background-color: #f0f8ff36;
     margin: auto;
     padding: 0;
-    -webkit-box-shadow: 0px 0px 14px 2px rgba(255,255,255,1);
-    -moz-box-shadow: 0px 0px 14px 2px rgba(255,255,255,1);
-    box-shadow: 0px 0px 14px 2px rgba(255,255,255,1);
+    -webkit-box-shadow: 0px 0px 14px 2px rgba(255, 255, 255, 1);
+    -moz-box-shadow: 0px 0px 14px 2px rgba(255, 255, 255, 1);
+    box-shadow: 0px 0px 14px 2px rgba(255, 255, 255, 1);
 }
-.main{
+
+.main {
     height: 70vh;
     display: flex;
     flex-direction: row;
     justify-content: center;
 
 }
-.addTeam{
+
+.addTeam {
     flex: 1;
     text-align: center;
+    margin: 20px;
+    background-color: #00000062;
+    font-weight: bold;
 }
-.btn{
-    height: 100px;
-    width: 130px;
+
+.team {
+    padding: 1em;
+    margin: auto;
+    width: 250px;
+    font-size: 1.4em;
+    background-color: #f0f8ff3b;
+}
+
+.btn {
+    display: flex;
+    flex-direction: column;
+    width: 250px;
     margin-left: auto;
     margin-right: auto;
-    text-align: right;
-
+    padding: 0;
+    font-size: 20px;
 }
-.btnMinus{
+
+h2 {
+    font-weight: bold;
+    color: aliceblue;
+}
+
+.btnPlus {
     width: 60px;
+    margin: 15px auto;
 }
-.btnPlus{
+
+.btnMinus {
     width: 60px;
-
+    margin: 15px auto;
 }
 
-.questions{
+.quizzes {
     flex: 1;
+    margin: 20px;
+    background-color: #00000062;
 }
-.team-container{
-    padding-bottom: 0px;
+
+.quizTheme {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    font-size: 25px;
+    margin: 20px;
+    color: white;
+
+}
+
+.quizTheme input {
+    width: 25px;
+    height: 25px;
+}
+
+.categories {
+    display: inline-block;
+    font-size: 25px;
+    color: white;
+    font-weight: bold;
+    padding: 20px;
+    width: 150px;
+}
+
+.categories input {
+    width: 25px;
+    height: 25px;
+}
+.start{
+    margin: 40px;
+    
+}
+.start input{
+    padding: 30px;
+    font-size: 20px;
+}
+.questions{
+    color: white;
+    font-size: 20px;
+    padding: 20px;
+}
+.team-container {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
     align-items: stretch;
     justify-content: center;
-}
-.team{
-    padding: 1.4em;
-    margin: auto;
-    width: 250px;
-    font-size: 1.2em;
-    background-color: rgba(240, 248, 255, 0.349);
+    background-color: #00000099;
+    margin: 0px;
+    padding: 15px;
 }
 
 .team[data-id="1"] {
     border-color: #ff0088;
-    background-color:#ff00887e ;
-    font-size: 1.2em;
-    color: aliceblue;
-
+    background-color: #ff00887e;
+    font-size: 1.4em;
+    font-weight: bold;
+    color: #fff;
 }
 
 
 .team[data-id="2"] {
     border-color: #00ffcc;
     background-color: #00ffcc7e;
-    font-size: 1.2em;
-    color: aliceblue;
+    font-size: 1.4em;
+    font-weight: bold;
+    color: #fff;
 }
 
 .team[data-id="3"] {
     border-color: #fa8072;
     background-color: #fa80727e;
-    font-size: 1.2em;
-    color: aliceblue;
+    font-size: 1.4em;
+    font-weight: bold;
+    color: #fff;
 }
 
 .team[data-id="4"] {
     border-color: #4b0082;
     background-color: #4c00827e;
-    font-size: 1.2em;
-    color: aliceblue;
+    font-size: 1.4em;
+    font-weight: bold;
+    color: #fff;
 }
