--- a/flipquizz/WebApp/www/css/app.css
+++ b/flipquizz/WebApp/www/css/app.css
@@ -1,5 +1,3 @@
-
-
 body {
     text-align: center;
     background-image: url("../img/uk2.jpg");
@@ -20,7 +18,7 @@ header h1 {
     height: 85%;
     background-color: #f0f8ff36;
     margin: auto;
-    margin-top: 50px;
+    margin-top: 55px;
     padding: 0;
     -webkit-box-shadow: 0px 0px 14px 2px rgba(255, 255, 255, 1);
     -moz-box-shadow: 0px 0px 14px 2px rgba(255, 255, 255, 1);
@@ -37,7 +35,7 @@ header h1 {
 .team-container {
     flex: 1;
     text-align: center;
-    margin: 30px;
+    margin: 20px;
     background-color: #00000062;
     font-weight: bold;
 }
@@ -56,6 +54,9 @@ header h1 {
     width: 250px;
     font-size: 1.4em;
     background-color: #f0f8ff3b;
+    display: flex;
+    flex-direction: column;
+
 }
 
 h2 {
@@ -67,17 +68,27 @@ h2 {
 
 .btnPlus {
     width: 60px;
-    margin: 15px auto;
+    height: 60px;
+    margin: 10px auto;
+    background: 0;
+    border: 0;
+    background-size: 100% 100%;
+    background-image: url('../img/plus.png');
 }
 
 .btnMinus {
     width: 60px;
-    margin: 15px auto;
+    height: 60px;
+    margin: 10px auto;
+    background: 0;
+    border: 0;
+    background-size: 100% 100%;
+    background-image: url('../img/moin.png');
 }
 
 .quiz-container {
     flex: 1;
-    margin: 30px;
+    margin: 20px;
     background-color: #00000062;
     position: relative;
 }
@@ -106,14 +117,10 @@ h2 {
     width: 150px;
 }
 
-
-.start {
-    margin: 5px;
-}
-
 .start input {
     padding: 20px;
     font-size: 30px;
+    margin: 10px 0px;
 }
 
 /* .questions {
@@ -129,7 +136,7 @@ h2 {
     align-items: stretch;
     justify-content: center;
     background-color: #00000099;
-    margin-top: 50px;
+    margin-top: 30px;
     padding: 15px;
 }
 
@@ -167,10 +174,12 @@ h2 {
 }
 
 
+
 /*center*/
 
 .right {
-    display: none;
+    /*display: flex;*/
+    display:none;
     justify-content: center;
     text-align: center;
     background-color: #00000062;
@@ -209,7 +218,7 @@ h3 {
     display: none;
     width: 100%;
     height: 100vh;
-    background-color: rgba(0, 0, 0, 0.932);
+    background-color: rgb(0, 0, 0);
     color: white;
     left: 0;
     top: 0;
@@ -268,7 +277,19 @@ h3 {
     border: 0;
     background-image: url("../img/reload.png");
     background-size: 100% 100%;
+    width: 35px;
+    height: 35px;
+    margin: 10px;
+}
+.back_main{
+    position: absolute;
+    top: 0;
+    right: 45px;
+    background: 0;
+    border: 0;
+    background-image: url("../img/back2.png");
+    background-size: 100% 100%;
     width: 40px;
     height: 40px;
-    margin: 10px;
+    margin: 8px;
 }
