--- a/flipquizz/WebApp/www/css/app.css
+++ b/flipquizz/WebApp/www/css/app.css
@@ -101,7 +101,9 @@ header h1 {
     flex-direction: column;
 
 }
-
+.team input{
+    font-size: 25px;
+}
 .btn h2 {
     font-weight: bold;
     color: aliceblue;
@@ -110,9 +112,9 @@ header h1 {
 }
 
 .btnPlus {
-    width: 60px;
-    height: 60px;
-    margin: 10px auto;
+    width: 50px;
+    height: 50px;
+    margin: 5px auto;
     background: 0;
     border: 0;
     background-size: 100% 100%;
@@ -120,9 +122,9 @@ header h1 {
 }
 
 .btnMinus {
-    width: 60px;
-    height: 60px;
-    margin: 10px auto;
+    width: 50px;
+    height: 50px;
+    margin: 5px auto;
     background: 0;
     border: 0;
     background-size: 100% 100%;
@@ -130,9 +132,9 @@ header h1 {
 }
 
 #btnStart {
-    padding: 20px;
-    font-size: 30px;
-    margin: 10px 0px;
+    width: 350px;
+    height: 50px;
+    font-size: 35px;
 }
 
 /* .questions {
