--- a/flipquizz/WebApp/www/css/app.css
+++ b/flipquizz/WebApp/www/css/app.css
@@ -5,9 +5,9 @@ body {
     /*font-family: 'Fredericka the Great', cursive;*/
     /* font-family: 'Nanum Brush Script', cursive; */
 }
-header{
 
-}
+header {}
+
 header h1 {
     font-size: 70px;
     color: white;
@@ -22,7 +22,7 @@ header h1 {
     height: 95vh;
     margin: 15px auto;
     padding: 0;
- 
+
     -webkit-box-shadow: 0px 0px 14px 2px rgba(255, 255, 255, 1);
     -moz-box-shadow: 0px 0px 14px 2px rgba(255, 255, 255, 1);
     box-shadow: 0px 0px 14px 2px rgba(255, 255, 255, 1);
@@ -33,16 +33,18 @@ header h1 {
     flex-direction: column;
     justify-content: center;
 }
-.start_conf{
+
+.start_conf {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     width: 450px;
     height: 150px;
     font-size: 45px;
 }
-.quiz-container{
+
+.quiz-container {
     background-color: #00000060;
     height: 80vh;
     margin: 20px;
@@ -59,7 +61,8 @@ header h1 {
     height: 30px;
     margin-right: 10px;
 }
-.quiz_theme label{
+
+.quiz_theme label {
     font-size: 35px;
 }
 
@@ -70,12 +73,14 @@ header h1 {
     font-weight: bold;
     padding: 20px;
 }
-.next{
+
+.next {
     width: 350px;
     height: 100px;
     font-size: 45px;
     padding: 20px;
 }
+
 .team-container {
     text-align: center;
     height: 65vh;
@@ -83,6 +88,7 @@ header h1 {
     background-color: #00000062;
     font-weight: bold;
 }
+
 .btn {
     display: flex;
     flex-direction: column;
@@ -91,6 +97,7 @@ header h1 {
     margin-right: auto;
     padding: 0;
 }
+
 .team {
     padding: 10px;
     margin: auto;
@@ -101,9 +108,11 @@ header h1 {
     flex-direction: column;
 
 }
-.team input{
+
+.team input {
     font-size: 25px;
 }
+
 .btn h2 {
     font-weight: bold;
     color: aliceblue;
@@ -260,7 +269,8 @@ h3 {
     height: 60px;
     margin: 10px;
 }
-.back{
+
+.back {
     position: absolute;
     top: 0;
     right: 80px;
@@ -272,6 +282,7 @@ h3 {
     height: 60px;
     margin: 10px;
 }
+
 .btnReponse,
 .btnValidate {
     padding: 20px;
@@ -285,7 +296,7 @@ h3 {
     font-size: 25px;
 }
 
-.reload{
+.reload {
     position: absolute;
     top: 0;
     right: 0;
@@ -297,7 +308,8 @@ h3 {
     height: 40px;
     margin: 35px 60px;
 }
-.back_main{
+
+.back_main {
     position: absolute;
     top: 0;
     right: 45px;
